--- a/frontend/farmertaxdashboard.html
+++ b/frontend/farmertaxdashboard.html
@@ -475,6 +475,7 @@
     <ul class="navbar-links">
       <li><a href="farmer.html">Farmer Portal</a></li>
       <li><a href="#" class="active">Tax Portal</a></li>
+      <li><a href="policies.html">Government policies</a></li>
       <li><a href="#reports">Reports</a></li>
     </ul>
   </nav>
@@ -606,30 +607,6 @@
           </table>
         </div>
       </section>
-
-      <!-- Transaction History -->
-      <section id="transactions-section">
-        <h2>💳 Transaction History</h2>
-        <div class="table-container">
-          <table>
-            <thead>
-              <tr>
-                <th>Type</th>
-                <th>Amount</th>
-                <th>Date</th>
-                <th>Description</th>
-                <th>Status</th>
-              </tr>
-            </thead>
-            <tbody id="transactionTableBody">
-              <tr>
-                <td colspan="5" style="text-align: center;">Loading...</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-
     </div>
 
     <!-- Empty State -->
