--- a/frontend/farmer.html
+++ b/frontend/farmer.html
@@ -12,8 +12,8 @@
         <ul class="navbar-links">
             <li><a href="#add-farmer">Farmer Portal</a></li>
             <li><a href="#policies-section">Crop</a></li>
-            <li><a href="#farmers-list">Bank</a></li>
-            <li><a href="farmertaxdashboard.html">Tax  Portal</a></li>
+            <li><a href="bank.html">Bank</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Details</a></li>
             <li><a href="#filter-section">Government Schemes</a></li>
             
         </ul>
