changed ui for bank and added crop page

--- a/frontend/bank.html
+++ b/frontend/bank.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="navbar-brand">🌾 Farmer Bank System</div>
+        <div class="navbar-brand">🌾 Kisan Seva Portal</div>
         <ul class="navbar-links">
-            <li><a href="#add-farmer">Farmer</a></li>
-            <li><a href="#policies-section">Crop</a></li>
+            <li><a href="farmer.html">Farmer</a></li>
+            <li><a href="crop.html">Crop</a></li>
             <li><a href="bank.html">Bank</a></li>
-            <li><a href="#farmer-actions">Tax Details</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Details</a></li>
             <li><a href="#filter-section">Government Schemes</a></li>
             
         </ul>
