--- a/frontend/farmer.html
+++ b/frontend/farmer.html
@@ -10,8 +10,8 @@
     <nav class="navbar">
         <div class="navbar-brand">🌾 Kisan Seva Portal</div>
         <ul class="navbar-links">
-            <li><a href="#add-farmer">Farmer Portal</a></li>
-            <li><a href="#policies-section">Crop</a></li>
+            <li><a href="farmer.html">Farmer Portal</a></li>
+            <li><a href="crop.html">Crop</a></li>
             <li><a href="bank.html">Bank</a></li>
             <li><a href="farmertaxdashboard.html">Tax Details</a></li>
             <li><a href="#filter-section">Government Schemes</a></li>
