--- a/frontend/farmertaxdashboard.html
+++ b/frontend/farmertaxdashboard.html
@@ -473,10 +473,12 @@
   <nav class="navbar">
     <div class="navbar-brand">🌾 Kisan Seva Portal</div>
     <ul class="navbar-links">
-      <li><a href="farmer.html">Farmer Portal</a></li>
-      <li><a href="#" class="active">Tax Portal</a></li>
-      <li><a href="policies.html">Government policies</a></li>
-      <li><a href="#reports">Reports</a></li>
+            <li><a href="#add-farmer">Farmer Portal</a></li>
+            <li><a href="#policies-section">Crop</a></li>
+            <li><a href="bank.html">Bank</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Details</a></li>
+            <li><a href="#filter-section">Government Schemes</a></li>
+            
     </ul>
   </nav>
 
