--- a/frontend/policies.html
+++ b/frontend/policies.html
@@ -492,10 +492,11 @@
         <div class="navbar-brand">🌾 Kisan Seva Portal</div>
         <ul class="navbar-links">
             <li><a href="farmer.html">Farmer Portal</a></li>
-            <li><a href="#">Crop</a></li>
-            <li><a href="#">Bank</a></li>
-            <li><a href="farmertaxdashboard.html">Tax Portal</a></li>
-            <li><a href="governmentpolicy.html" class="active">Government Schemes</a></li>
+            <li><a href="#policies-section">Crop</a></li>
+            <li><a href="bank.html">Bank</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Details</a></li>
+            <li><a href="#filter-section">Government Schemes</a></li>
+            
         </ul>
     </nav>
 
