--- a/frontend/bank.html
+++ b/frontend/bank.html
@@ -15,14 +15,7 @@
             <li><a href="crop.html">Crop</a></li>
             <li><a href="bank.html">Bank</a></li>
             <li><a href="farmertaxdashboard.html">Tax Details</a></li>
-            <li><a href="#filter-section">Government Schemes</a></li>
-=======
-            <li><a href="farmer.html">Farmer Portal</a></li>
-            <li><a href="crop.html">Crop</a></li>
-            <li><a href="bank.html">Bank Portal</a></li>
-            <li><a href="#farmer-actions">Tax Portal</a></li>
-            <li><a href="#filter-section">Government Policies</a></li>
->>>>>>> Stashed changes
+            <li><a href="policies.html">Government Schemes</a></li>
             
         </ul>
     </nav>
