--- a/frontend/crop.html
+++ b/frontend/crop.html
@@ -34,7 +34,7 @@
             <li><a href="crop.html">Crop</a></li>
             <li><a href="bank.html">Bank</a></li>
             <li><a href="farmertaxdashboard.html">Tax Details</a></li>
-            <li><a href="#filter-section">Government Schemes</a></li>
+            <li><a href="policies.html">Government Schemes</a></li>
             
         </ul>
     </nav>
