--- a/frontend/farmertaxdashboard.html
+++ b/frontend/farmertaxdashboard.html
@@ -471,16 +471,16 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="navbar-brand">🌾 Kisan Seva Portal</div>
-    <ul class="navbar-links">
-            <li><a href="#add-farmer">Farmer Portal</a></li>
-            <li><a href="#policies-section">Crop</a></li>
+        <div class="navbar-brand">🌾 Kisan Seva Portal</div>
+        <ul class="navbar-links">
+            <li><a href="farmer.html">Farmer</a></li>
+            <li><a href="crop.html">Crop</a></li>
             <li><a href="bank.html">Bank</a></li>
             <li><a href="farmertaxdashboard.html">Tax Details</a></li>
-            <li><a href="#filter-section">Government Schemes</a></li>
+            <li><a href="policies.html">Government Schemes</a></li>
             
-    </ul>
-  </nav>
+        </ul>
+    </nav>
 
   <div id="main-content">
     <!-- Farmer Selection -->
