--- a/frontend/policies.html
+++ b/frontend/policies.html
@@ -491,11 +491,11 @@
     <nav class="navbar">
         <div class="navbar-brand">🌾 Kisan Seva Portal</div>
         <ul class="navbar-links">
-            <li><a href="farmer.html">Farmer Portal</a></li>
-            <li><a href="#policies-section">Crop</a></li>
+            <li><a href="farmer.html">Farmer</a></li>
+            <li><a href="crop.html">Crop</a></li>
             <li><a href="bank.html">Bank</a></li>
             <li><a href="farmertaxdashboard.html">Tax Details</a></li>
-            <li><a href="#filter-section">Government Schemes</a></li>
+            <li><a href="policies.html">Government Schemes</a></li>
             
         </ul>
     </nav>
