Initial commit for tax portal

--- a/frontend/policies.html
+++ b/frontend/policies.html
@@ -492,10 +492,10 @@
         <div class="navbar-brand">🌾 Kisan Seva Portal</div>
         <ul class="navbar-links">
             <li><a href="farmer.html">Farmer Portal</a></li>
-            <li><a href="#policies-section">Crop</a></li>
-            <li><a href="bank.html">Bank</a></li>
-            <li><a href="farmertaxdashboard.html">Tax Details</a></li>
-            <li><a href="#filter-section">Government Schemes</a></li>
+            <li><a href="crop.html">Crop Portal</a></li>
+            <li><a href="bank.html">Bank Portal</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Portal</a></li>
+            <li><a href="policies.html">Schemes Portal</a></li>
             
         </ul>
     </nav>
@@ -522,13 +522,13 @@
 
             <!-- Eligible Policies -->
             <section>
-                <h2>✅ Eligible Policies (Available to Apply)</h2>
+                <h2>Eligible Policies (Available to Apply)</h2>
                 <div class="policy-grid" id="eligiblePolicies"></div>
             </section>
 
             <!-- Applied Policies -->
             <section>
-                <h2>📜 Applied Policies</h2>
+                <h2>Applied Policies</h2>
                 <div style="overflow-x: auto;">
                     <table id="appliedPoliciesTable">
                         <thead>
@@ -549,7 +549,7 @@
 
             <!-- Disbursements -->
             <section>
-                <h2>💸 Money Received (Disbursements)</h2>
+                <h2> Money Received (Disbursements)</h2>
                 <div class="chart-container" id="disbursementChart"></div>
                 <div style="overflow-x: auto;">
                     <table>
