--- a/frontend/farmertaxdashboard.html
+++ b/frontend/farmertaxdashboard.html
@@ -473,11 +473,11 @@
   <nav class="navbar">
     <div class="navbar-brand">🌾 Kisan Seva Portal</div>
     <ul class="navbar-links">
-            <li><a href="#add-farmer">Farmer Portal</a></li>
-            <li><a href="#policies-section">Crop</a></li>
-            <li><a href="bank.html">Bank</a></li>
-            <li><a href="farmertaxdashboard.html">Tax Details</a></li>
-            <li><a href="#filter-section">Government Schemes</a></li>
+            <li><a href="farmer.html">Farmer Portal</a></li>
+            <li><a href="crop.html">Crop Portal</a></li>
+            <li><a href="bank.html">Bank Portal</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Portal</a></li>
+            <li><a href="policies.html">Schemes Portal</a></li>
             
     </ul>
   </nav>
