--- a/frontend/policies.html
+++ b/frontend/policies.html
@@ -501,7 +501,7 @@
     </nav>
 
     <div id="main-content">
-        <h1>🏛️ Government Policy Dashboard</h1>
+        <h1> Government Policy Dashboard</h1>
 
         <div class="farmer-select">
             <label for="farmerDropdown">Select Farmer:</label>
