--- a/frontend/farmer.html
+++ b/frontend/farmer.html
@@ -195,6 +195,13 @@
 <body>
     <nav class="navbar">
         <div class="navbar-brand">🌾 Kisan Seva Portal</div>
+        <ul class="navbar-links">
+            <li><a href="farmer.html">Farmer Portal</a></li>
+            <li><a href="crop.html">Crop Portal</a></li>
+            <li><a href="bank.html">Bank Portal</a></li>
+            <li><a href="farmertaxdashboard.html">Tax Portal</a></li>
+            <li><a href="policies.html">Schemes Portal</a></li>
+        </ul>
     </nav>
 
     <div id="main-content">
