final from indrajeet

--- a/frontend/bank.html
+++ b/frontend/bank.html
@@ -10,11 +10,11 @@
     <nav class="navbar">
         <div class="navbar-brand">🌾 Kisan Seva Portal</div>
         <ul class="navbar-links">
-            <li><a href="farmer.html">Farmer Portal</a></li>
-            <li><a href="crop.html">Crop Portal</a></li>
-            <li><a href="bank.html">Bank Portal</a></li>
-            <li><a href="farmertaxdashboard.html">Tax Portal</a></li>
-            <li><a href="policies.html">Schemes Portal</a></li>
+            <li><a href="farmer.html">Farmer</a></li>
+            <li><a href="crop.html">Crop</a></li>
+            <li><a href="bank.html">Bank</a></li>
+            <li><a href="farmertaxdashboard.html">Tax</a></li>
+            <li><a href="policies.html">Schemes</a></li>
 
         </ul>
     </nav>
